# ac-shields-badges

./: .gitignore  Cargo.toml  LICENSE  README.md  bacon.toml  vercel.json
.github/: dependabot.yml
.github/workflows/: dependabot_auto_merge.yml  rust.yml
api/: Cargo.toml  _util.rs  ac-rate.rs
lib/: atcoder.rs  contest_type.rs  mod.rs  rate.rs  shields.rs  uptrash_rate_limiter.rs  user_id.rs  util.rs
public/: index.html
