[package]
name = "index"
version = "1.0.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2021"

[dependencies]
http = "1.1"
once_cell = "1.20.2"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio = { version = "1", features = ["macros"] }
url = "2.5.3"
vercel_runtime = { version = "1" }

[dev-dependencies]
rstest = "0.23.0"

[lib]
name = "util"
path = "lib/util.rs"

[[bin]]
name = "ac-rate"
path = "api/ac-rate.rs"
