[package]
name = "index"
version = "1.0.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2021"

[dependencies]
easy-scraper = "0.2.0"
http = "1.3"
once_cell = "1.21.3"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2.0.14"
tokio = { version = "1", features = ["macros"] }
url = "2.5.4"
vercel_runtime = { version = "1" }

[dev-dependencies]
rstest = "0.25.0"

[lib]
name = "lib"
path = "lib/mod.rs"

[[bin]]
name = "ac-rate"
path = "api/ac-rate.rs"
