[package]
name = "index"
version = "1.0.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2024"

[dependencies]
easy-scraper = "0.2.0"
regex = "1.12"
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] } # async runtime
url = "2.5.8"
vercel_runtime = { version = "2" } # handles communicating with Vercel's function bridge

[dev-dependencies]
rstest = "0.26.1"

[lib]
name = "lib"
path = "lib/mod.rs"

[[bin]]
name = "ac-rate"
path = "api/ac-rate.rs"

# This section configures settings for the release profile, which optimizes the build for performance.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
