[package]
name = "index"
version = "1.0.0"
authors = ["emanon001 <emanon001@gmail.com>"]
edition = "2018"

[dependencies]
http = "0.1"
vercel_lambda = "*"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.2"
regex = "1.5"
once_cell = "1.12.0"

[dev-dependencies]
rstest = "0.14.0"

[lib]
name = "util"
path = "_util.rs"

[[bin]]
name = "ac-rate"
path = "ac-rate.rs"
